| Summary: | ASTERISK-24588: res_calendar does not process CalDAV from Owncloud [fix included] | ||
| Reporter: | Stefan Gofferje (sgofferj) | Labels: | |
| Date Opened: | 2014-12-03 04:02:53.000-0600 | Date Closed: | 2017-09-15 08:12:33 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_calendar_caldav |
| Versions: | 11.14.1 12.7.1 13.0.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Linux epsilonix 3.13.0-40-generic #69-Ubuntu SMP Thu Nov 13 17:53:56 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux | Attachments: | |
| Description: | res_calendar_caldav does not process CalDAV sources from the popular Owncloud package properly. The issue has been addressed on asterisk-users here: http://lists.digium.com/pipermail/asterisk-users/2013-August/280303.html
I have tested the patch posted on asterisk-users and it works with my Asterisk SVN-branch-11-r424182M. I'm no CalDAV expert but the patch MIGHT break other CalDAV compatibility. As Owncloud is a very popular system, I would suggest in this case introducing a new subressource res_calendar_caldav-owncloud or similar. | ||
| Comments: | By: Stefan Gofferje (sgofferj) 2014-12-03 04:05:24.829-0600 Forgot: My Owncloud version is 7.0.3. By: Matt Jordan (mjordan) 2014-12-03 06:41:53.571-0600 Two points: # Patches *must* be provided by the author of the patch after signing a license contributor agreement. The easiest way is to create a unified diff of the patch, attach it to this issue, and mark it as a code contribution. However, the author of the patch must do that. Patches referenced from an e-mail or another source cannot be used. # As the e-mail notes, the changes would most likely break Google compatibility. That's a bit more popular than Owncloud. A proper solution would support both platforms. By: Stefan Gofferje (sgofferj) 2014-12-03 06:49:43.894-0600 Sorry, I'm no developer. Creating a real patch for a complex project like asterisk is way out of my league. I was just trying to make it easier for the asterisk developers to fix this by providing a link to a working solution. However, I would assume that those 3 changes are so minimal that they do not have the necessary originality to be copyrighted and thus can be used by the asterisk developers. By: Stefan Gofferje (sgofferj) 2014-12-03 06:51:36.602-0600 As for popularity - just as a note, Google is becoming increasingly unpopular - at least in Europe - due to privacy concerns. By: Matt Jordan (mjordan) 2014-12-03 07:57:33.460-0600 All patches must be provided by the author of the patch after signing a CLA. The size of the patch is immaterial: at the end of the day, it is their work, and they get to choose how to license it. While this is an interoperability issue, without a patch, I would not expect a resolution quickly. By: Friendly Automation (friendly-automation) 2017-09-15 08:12:35.012-0500 Change 6491 merged by Jenkins2: res_calendar: Various fixes [https://gerrit.asterisk.org/6491|https://gerrit.asterisk.org/6491] By: Friendly Automation (friendly-automation) 2017-09-15 08:16:20.644-0500 Change 6492 merged by Jenkins2: res_calendar: Various fixes [https://gerrit.asterisk.org/6492|https://gerrit.asterisk.org/6492] By: Friendly Automation (friendly-automation) 2017-09-15 08:17:12.508-0500 Change 6493 merged by Jenkins2: res_calendar: Various fixes [https://gerrit.asterisk.org/6493|https://gerrit.asterisk.org/6493] By: Friendly Automation (friendly-automation) 2017-09-15 08:22:56.205-0500 Change 6494 merged by Joshua Colp: res_calendar: Various fixes [https://gerrit.asterisk.org/6494|https://gerrit.asterisk.org/6494] | ||